# livraria_marrcandre_2023

./: .env_exemplo  Procfile  README.md  build.sh  db.sqlite3  livraria.json  livraria_bkp.json  livraria_local.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py
livraria/migrations/: 0001_initial.py  0002_initial.py  0002_livro_capa.py  0003_compra.py  0004_itenscompra.py  0005_alter_livro_preco_alter_livro_quantidade.py  0006_autor_telefone.py  0007_itenscompra_preco.py  0008_alter_itenscompra_preco.py  0009_rename_preco_itenscompra_preco_item.py  0010_alter_itenscompra_preco_item.py  0011_compra_data_compra.py  0012_rename_data_compra_compra_data.py  0013_alter_compra_data.py  0014_compra_tipo_pagamento.py  0015_alter_compra_tipo_pagamento.py
livraria/models/: __init__.py  autor.py  compra.py  editora.py  livro.py
livraria/serializers/: __init__.py  compra.py  livro.py
livraria/views/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
scripts/: set_my_ip.py
staticfiles/: staticfiles.json
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py
usuario/migrations/: 0001_initial.py  0002_usuario_tipo.py  0003_usuario_tipo_usuario.py  0004_remove_usuario_tipo.py
